--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                                 <section className="relative h-[600px] flex items-center justify-center overflow-hidden bg-slate-900">
                                     <div className="absolute inset-0 bg-gradient-to-r from-slate-900 via-slate-800 to-blue-900 opacity-90"></div>
                                     <div className="relative z-10 text-center px-4 max-w-4xl mx-auto">
+                                        <img src="logo.png" alt="Zenith" className="h-10 w-auto" />
                                         <span className="text-blue-400 font-bold tracking-widest uppercase text-sm mb-4 block">Innovación y Rendimiento</span>
                                         
                                         {/* AQUÍ VA TU ESLOGAN PRINCIPAL */}
