--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
                                             </button>
                                             <p className="text-2xl font-bold text-slate-400">{products.prime.price}</p>
                                         </div>
+                                        <div className="relative h-[500px] rounded-3xl overflow-hidden flex items-center justify-center border border-slate-700 shadow-2xl bg-slate-800">
+                                        <div className="absolute inset-0 bg-gradient-to-tr from-purple-900/20 to-transparent z-0"></div>
+                                            <img src="PrimeLine.png" alt="PrimeLine PC" className="relative z-10 w-full h-full object-cover hover:scale-105 transition-transform duration-700" 
+                                            onError={(e) => {e.target.style.display='none'; e.target.parentElement.innerHTML='<div class="text-center"><p>Sube prime-pc.png</p></div>'}} />
+                                        </div>
                                     </div>
                                     <div className="relative h-[500px] bg-slate-800 rounded-3xl overflow-hidden flex items-center justify-center border border-slate-700 shadow-2xl">
                                         <div className="absolute inset-0 bg-gradient-to-tr from-purple-900/40 to-transparent"></div>
@@ -258,6 +263,11 @@
                         {activeSection === 'eco' && (
                             <div className="bg-white text-slate-800 min-h-screen animate-fade-in">
                                 <div className="max-w-7xl mx-auto px-4 py-20 grid md:grid-cols-2 gap-12 items-center">
+                                    <div className="order-2 md:order-1 relative h-[450px] w-full rounded-3xl flex items-center justify-center">
+                                        
+                                        <img src="EcoLine.png" alt="EcoLine Laptop" className="absolute inset-0 w-full h-full object-contain z-10" />
+                                        
+                                    </div>
                                     <div className="order-2 md:order-1 relative h-[500px] bg-teal-50 rounded-3xl overflow-hidden flex items-center justify-center border border-teal-100">
                                         <div className="text-center z-10">
                                             <div className="text-teal-200 mx-auto mb-4 flex justify-center"><Icons.Monitor /></div>
