--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <style>
         html { scroll-behavior: smooth; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .newspaper-shadow { box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); }
     </style>
 </head>
 <body class="bg-white text-slate-800 antialiased">
@@ -68,7 +69,8 @@
             Linkedin: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>,
             Users: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>,
             Target: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="6"></circle><circle cx="12" cy="12" r="2"></circle></svg>,
-            ArrowRight: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+            ArrowRight: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>,
+            Handshake: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m11 17 2 2a2 2 0 1 0 2.83-2.83l-9-9a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l9 9a2 2 0 1 1-2.83 2.83L13 15"></path><path d="m22 22-5-5"></path><path d="m8 8 9-9"></path></svg>
         };
 
         const { useState, useEffect } = React;
@@ -246,7 +248,6 @@
                             <div className="bg-white text-slate-800 min-h-screen animate-fade-in">
                                 <div className="max-w-7xl mx-auto px-4 py-20 grid md:grid-cols-2 gap-12 items-center">
                                     <div className="order-2 md:order-1 relative h-[450px] w-full rounded-3xl flex items-center justify-center">
-                                        {/* Sin overlay de logo, solo la imagen */}
                                         <img src="EcoLine.png" alt="EcoLine Laptop" className="absolute inset-0 w-full h-full object-contain z-10" 
                                             onError={(e) => {e.target.style.display='none'; e.target.parentElement.innerHTML='<div class="text-center p-4"><p>Sube "EcoLine.png" a GitHub.</p></div>'}} />
                                     </div>
@@ -284,6 +285,7 @@
                                 </div>
 
                                 <div className="max-w-5xl mx-auto px-4 py-20">
+                                    {/* Introduction */}
                                     <div className="grid md:grid-cols-2 gap-12 mb-20 items-center">
                                         <div>
                                             <h2 className="text-3xl font-bold text-slate-900 mb-6">Quiénes Somos</h2>
@@ -313,10 +315,11 @@
                                         </div>
                                     </div>
                                     
+                                    {/* Values Grid */}
                                     <div className="text-center mb-12">
                                         <h2 className="text-3xl font-bold text-slate-900">Nuestros Valores</h2>
                                     </div>
-                                    <div className="grid md:grid-cols-3 gap-8">
+                                    <div className="grid md:grid-cols-3 gap-8 mb-20">
                                         <div className="bg-white p-8 rounded-xl shadow-sm text-center hover:shadow-md transition-shadow">
                                             <div className="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mx-auto mb-4 text-blue-600"><Icons.ShieldCheck /></div>
                                             <h3 className="font-bold text-xl mb-2">Calidad</h3>
@@ -333,6 +336,51 @@
                                             <p className="text-slate-500">Soporte técnico real, humano y orientado a soluciones.</p>
                                         </div>
                                     </div>
+
+                                    {/* --- PARTNERS SECTION --- */}
+                                    <div className="mt-20 mb-12 text-center">
+                                        <h2 className="text-3xl font-bold text-slate-900">Nuestros Partners</h2>
+                                        <p className="text-slate-500 mt-2">Colaboraciones que definen nuestros valores.</p>
+                                    </div>
+
+                                    <div className="grid md:grid-cols-2 gap-12">
+                                        {/* KOI Card */}
+                                        <div className="bg-white rounded-2xl shadow-lg overflow-hidden border border-slate-100 flex flex-col hover:shadow-2xl transition-shadow">
+                                            <div className="h-48 bg-slate-900 flex items-center justify-center relative">
+                                                <div className="absolute inset-0 bg-gradient-to-br from-purple-900 to-slate-900 opacity-90"></div>
+                                                <img src="Koi_Fenix.png" alt="KOI Fénix" className="relative z-10 h-32 w-auto object-contain" 
+                                                    onError={(e) => {e.target.style.display='none'; e.target.parentElement.innerHTML='<span class="text-white font-bold">[Sube Koi_Fenix.png]</span>'}}/>
+                                            </div>
+                                            <div className="p-8 flex-grow">
+                                                <span className="text-purple-600 font-bold uppercase text-xs tracking-wider">E-Sports & Gaming</span>
+                                                <h3 className="text-2xl font-bold text-slate-900 mt-2 mb-4">KOI FÉNIX</h3>
+                                                <p className="text-slate-600 mb-4">Zenith Digital se convierte en patrocinador tecnológico oficial del equipo KOI Fénix, proporcionando equipos de alto rendimiento para su próxima temporada competitiva.</p>
+                                                <blockquote className="italic text-slate-500 border-l-4 border-purple-500 pl-4 text-sm bg-slate-50 p-3 rounded-r-lg">
+                                                    “El talento joven y la tecnología deben avanzar juntos, y este acuerdo nos permite apoyar a nuevos profesionales del sector gaming.”
+                                                    <br/><span className="font-bold not-italic text-xs mt-2 block">- Laura Ramos, Dir. Comunicación</span>
+                                                </blockquote>
+                                            </div>
+                                        </div>
+
+                                        {/* Cancer Run Card */}
+                                        <div className="bg-white rounded-2xl shadow-lg overflow-hidden border border-slate-100 flex flex-col hover:shadow-2xl transition-shadow">
+                                            <div className="h-48 bg-teal-500 flex items-center justify-center relative">
+                                                 <div className="absolute inset-0 bg-gradient-to-br from-teal-400 to-green-500 opacity-90"></div>
+                                                 <img src="CarreraContraCancer.png" alt="Carrera Contra el Cáncer" className="relative z-10 h-32 w-auto object-contain" 
+                                                    onError={(e) => {e.target.style.display='none'; e.target.parentElement.innerHTML='<span class="text-white font-bold">[Sube CarreraContraCancer.png]</span>'}}/>
+                                            </div>
+                                            <div className="p-8 flex-grow">
+                                                <span className="text-teal-600 font-bold uppercase text-xs tracking-wider">Responsabilidad Social</span>
+                                                <h3 className="text-2xl font-bold text-slate-900 mt-2 mb-4">Carrera Contra el Cáncer 2025</h3>
+                                                <p className="text-slate-600 mb-4">Zenith Digital patrocina este evento solidario, aportando recursos y logística en apoyo a la investigación oncológica.</p>
+                                                <blockquote className="italic text-slate-500 border-l-4 border-teal-500 pl-4 text-sm bg-slate-50 p-3 rounded-r-lg">
+                                                    “Creemos en una tecnología al servicio de las personas, y apoyar una causa como esta refleja nuestros valores como empresa.”
+                                                    <br/><span className="font-bold not-italic text-xs mt-2 block">- Laura Ramos, Portavoz</span>
+                                                </blockquote>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                              </div>
                         )}
@@ -360,7 +408,7 @@
                                                 <h2 className="text-3xl md:text-4xl font-serif font-bold text-slate-900 mt-2 mb-4 leading-tight">
                                                     Zenith Digital dona equipos a la UAH y lanza un concurso universitario de desarrollo de videojuegos
                                                 </h2>
-                                                {/* IMAGEN UAH AQUÍ */}
+                                                {/* IMAGEN UAH */}
                                                 <div className="w-full h-64 bg-slate-50 mb-6 flex items-center justify-center overflow-hidden border border-slate-100">
                                                     <img src="uah.png" alt="Universidad de Alcalá" className="h-full w-auto object-contain" 
                                                         onError={(e) => {e.target.style.display='none'; e.target.parentElement.innerHTML='<span class="text-slate-400 font-bold">[Sube uah.png]</span>'}}/>
@@ -399,7 +447,7 @@
                                                 </p>
                                             </article>
 
-                                            {/* ANUNCIO PRIMELINE CON DISEÑO CHULO */}
+                                            {/* ANUNCIO PRIMELINE */}
                                             <div className="relative overflow-hidden rounded-xl bg-slate-900 text-white shadow-xl group cursor-pointer" onClick={() => navigateTo('prime')}>
                                                 <div className="absolute inset-0 bg-gradient-to-br from-purple-600 to-blue-900 opacity-80"></div>
                                                 <div className="absolute -right-10 -top-10 w-40 h-40 bg-purple-500 rounded-full blur-3xl opacity-50"></div>
@@ -413,7 +461,6 @@
                                                         Ver Oferta <Icons.ArrowRight />
                                                     </button>
                                                 </div>
-                                                {/* Borde brillante animado */}
                                                 <div className="absolute inset-0 border-2 border-purple-500/30 rounded-xl"></div>
                                             </div>
 
