--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <style>
         html { scroll-behavior: smooth; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-        /* Ocultar barra de scroll en el carrito pero permitir scroll */
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
@@ -55,7 +54,7 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        // --- ICONOS SVG ---
+        // --- ICONOS ---
         const Icons = {
             Zap: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>,
             Battery: () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect x="2" y="7" width="16" height="10" rx="2" ry="2"></rect><line x1="22" y1="11" x2="22" y2="13"></line></svg>,
@@ -112,17 +111,17 @@
 
             const cartTotal = cart.reduce((total, item) => total + item.price, 0);
 
-            // CATALOGO DE LA TIENDA
+            // CATALOGO DE LA TIENDA (PRECIOS ACTUALIZADOS)
             const shopProducts = [
-                { id: 1, name: "Zenith Prime X1", category: "prime", price: 1899, image: "PrimeLine.png", desc: "Laptop Gaming Extremo, RTX 4090, 32GB RAM" },
-                { id: 2, name: "Zenith EcoBook", category: "eco", price: 499, image: "EcoLine.png", desc: "Ultrabook para estudiantes, batería 12h" },
+                { id: 1, name: "Zenith Prime X1", category: "prime", price: 1699, image: "PrimeLine.png", desc: "Laptop Gaming Extremo, RTX 4090, 32GB RAM" },
+                { id: 2, name: "Zenith EcoBook", category: "eco", price: 699, image: "EcoLine.png", desc: "Ultrabook para estudiantes, batería 12h" },
                 { id: 3, name: "Prime Tower Beast", category: "prime", price: 2499, image: "PrimeLine.png", desc: "Torre de sobremesa, Refrigeración líquida custom" },
                 { id: 4, name: "EcoMini Station", category: "eco", price: 350, image: "EcoLine.png", desc: "Mini PC para oficina y multimedia" },
                 { id: 5, name: "Zenith Pro Display", category: "acc", price: 299, image: "PrimeLine.png", desc: "Monitor 144Hz 4K para creadores" },
                 { id: 6, name: "Zenith Buds", category: "acc", price: 59, image: "EcoLine.png", desc: "Auriculares con cancelación de ruido" },
             ];
 
-            // Datos informativos
+            // Datos informativos (PRECIOS ACTUALIZADOS)
             const productsInfo = {
                 prime: {
                     title: "PrimeLine",
@@ -361,9 +360,9 @@
                                     <div>
                                         <span className="text-purple-400 font-bold tracking-wider text-sm uppercase mb-2 block">Gama Alta / Gaming</span>
                                         <h1 className="text-5xl md:text-7xl font-black mb-6 italic">PRIME<span className="text-purple-500">LINE</span></h1>
-                                        <p className="text-xl text-slate-300 mb-8 leading-relaxed">{products.prime.description}</p>
+                                        <p className="text-xl text-slate-300 mb-8 leading-relaxed">{productsInfo.prime.description}</p>
                                         <ul className="space-y-4 mb-10">
-                                            {products.prime.features.map((feat, idx) => (
+                                            {productsInfo.prime.features.map((feat, idx) => (
                                                 <li key={idx} className="flex items-center gap-3 text-lg">
                                                     <div className="bg-purple-600/20 p-2 rounded-lg text-purple-400"><Icons.Zap /></div>
                                                     {feat}
@@ -372,7 +371,7 @@
                                         </ul>
                                         <div className="flex items-center gap-6">
                                             <button onClick={() => navigateTo('shop')} className="bg-purple-600 hover:bg-purple-500 text-white px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-[0_0_20px_rgba(147,51,234,0.5)]">Configurar PrimeLine</button>
-                                            <p className="text-2xl font-bold text-slate-400">{products.prime.price}</p>
+                                            <p className="text-2xl font-bold text-slate-400">{productsInfo.prime.price}</p>
                                         </div>
                                     </div>
                                     
@@ -408,9 +407,9 @@
                                     <div className="order-1 md:order-2">
                                         <span className="text-teal-600 font-bold tracking-wider text-sm uppercase mb-2 block">Estudiantes / Hogar</span>
                                         <h1 className="text-5xl md:text-7xl font-bold mb-6 text-slate-900">Eco<span className="text-teal-500">Line</span></h1>
-                                        <p className="text-xl text-slate-600 mb-8 leading-relaxed">{products.eco.description}</p>
+                                        <p className="text-xl text-slate-600 mb-8 leading-relaxed">{productsInfo.eco.description}</p>
                                         <ul className="space-y-4 mb-10">
-                                            {products.eco.features.map((feat, idx) => (
+                                            {productsInfo.eco.features.map((feat, idx) => (
                                                 <li key={idx} className="flex items-center gap-3 text-lg text-slate-700">
                                                     <div className="bg-teal-100 p-2 rounded-full text-teal-600"><Icons.ShieldCheck /></div>
                                                     {feat}
@@ -419,7 +418,7 @@
                                         </ul>
                                         <div className="flex items-center gap-6">
                                             <button onClick={() => navigateTo('shop')} className="bg-teal-600 hover:bg-teal-700 text-white px-8 py-4 rounded-full font-bold text-lg transition-all shadow-lg">Comprar EcoLine</button>
-                                            <p className="text-2xl font-bold text-teal-700">{products.eco.price}</p>
+                                            <p className="text-2xl font-bold text-teal-700">{productsInfo.eco.price}</p>
                                         </div>
                                     </div>
                                 </div>
