Change product images and descriptions in shop catalog
Updated product images for existing items in the shop.

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             const shopProducts = [
                 { id: 1, name: "Zenith Prime X1", category: "prime", price: 1699, image: "PrimeLine.png", desc: "Laptop Gaming Extremo, RTX 4090, 32GB RAM" },
                 { id: 2, name: "Zenith EcoBook", category: "eco", price: 699, image: "EcoLine.png", desc: "Ultrabook para estudiantes, batería 12h" },
-                { id: 3, name: "Prime Tower Beast", category: "prime", price: 2499, image: "PrimeLine.png", desc: "Torre de sobremesa, Refrigeración líquida custom" },
-                { id: 4, name: "EcoMini Station", category: "eco", price: 350, image: "EcoLine.png", desc: "Mini PC para oficina y multimedia" },
-                { id: 5, name: "Zenith Pro Display", category: "acc", price: 299, image: "PrimeLine.png", desc: "Monitor 144Hz 4K para creadores" },
-                { id: 6, name: "Zenith Buds", category: "acc", price: 59, image: "EcoLine.png", desc: "Auriculares con cancelación de ruido" },
+                { id: 3, name: "Prime Tower Beast", category: "prime", price: 2499, image: "TorrePrime.png", desc: "Torre de sobremesa, Refrigeración líquida custom" },
+                { id: 4, name: "EcoMini Station", category: "eco", price: 350, image: "TorreEco.png", desc: "Mini PC para oficina y multimedia" },
+                { id: 5, name: "Zenith Pro Display", category: "acc", price: 299, image: "MonitorPrime.png", desc: "Monitor 144Hz 4K para creadores" },
+                { id: 6, name: "Zenith Buds", category: "acc", price: 59, image: "EcoBuds.png", desc: "Auriculares con cancelación de ruido" },
             ];
 
             // Datos informativos (PRECIOS ACTUALIZADOS)
