Update section titles from 'Partners' to 'Patrocinios'

--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
                                         </div>
                                     </div>
 
-                                    {/* --- PARTNERS SECTION --- */}
+                                    {/* --- PATROCINADORES SECTION --- */}
                                     <div className="mt-20 mb-12 text-center">
-                                        <h2 className="text-3xl font-bold text-slate-900">Nuestros Partners</h2>
+                                        <h2 className="text-3xl font-bold text-slate-900">Nuestros Patrocinios</h2>
                                         <p className="text-slate-500 mt-2">Colaboraciones que definen nuestros valores.</p>
                                     </div>
 
